--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html>
   <head>
     <title>Something</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1 id="title" class="btn">This works!</h1>
+    <div class="js-clock">
+        <h1>00:00</h1>
+    </div>
+    <form class="js-form form">
+        <input type="text" placeholder="What is your name?">
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+        <input type="text" placeholder="Write a to do" />
+    </form>
+    <ul class="js-toDoList">      
+    </ul>
+    <span class="js-weather"></span>
     <script src="clock.js"></script>
-  </body>
+    <script src="getting.js"></script>
+    <script src="todo.js"></script>
+    <script src="bg.js"></script>
+    <script src="weather.js"></script>
+</body>
 </html>
